quick fixes on configuration parsing code

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@ iterator
 # Test binary, built with `go test -c`
 *.test
 tests/
-it-data/
+data/
 helpers/
+.release/defaults/test.config.hcl
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
