--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -19,8 +19,10 @@ jobs:
       with:
         go-version: '^1.21'
 
-    - name: Read API_VERSION
-      run: echo "VERSION=$(cat API_VERSION)" >> $GITHUB_ENV
+    - name: Setup Environment
+      run: |
+        echo "VERSION=$(cat API_VERSION)" >> $GITHUB_ENV
+        mkdir ./artifacts
 
     - name: Install Terraform
       run: |
