--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'main.go'
+      - 'packages/**/*.go'
+      - 'Dockerfile'
   workflow_dispatch:
 
 jobs:
