--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
       - 'main.go'
       - 'packages/**/*.go'
       - 'Dockerfile'
+      - 'GNUmakefile'
   pull_request:
     branches: [ main ]
   workflow_dispatch:
