--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,6 +69,22 @@ jobs:
       run: |
         echo "::set-output name=content::$(make changelog)"
 
+    - name: Build Binary
+      run: make build
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: "v${{ env.VERSION }}"
+        release_name: "Release v${{ env.VERSION }}"
+        draft: false
+        prerelease: false
+        body: "Iterator binary release"
+        files: |
+          build/iterator
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
