adding summary state for iterator status key. - adding release cli subcommand for releasing terraform resources deployed with the sawtooth scheduling mode. - adding terragrunt driver at the global and task config level.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - 'main.go'
       - 'packages/**/*.go'
+      - ".github/workflows/codeql.yml"
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ main ]
